--- a/Frontend/publikus.html
+++ b/Frontend/publikus.html
@@ -8,29 +8,27 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="main.js" type="module"></script>
-    <link rel="stylesheet" href="CSS/stilus.css" />
-    <link rel="stylesheet" href="view/urlap/stilus.css" />
+    <link rel="stylesheet" href="CSS/stilus.css">
+    <link rel="stylesheet" href="view/urlap/stilus.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
   <body>
     <main>
       <header>
-        <h1>Admin</h1>
+        <h1>Public</h1>
       </header>
       <nav>
         <ul>
-          <li><a href="index.html">Admin</a></li>
-          <li><a href="publikus.html">Public</a></li>
+            <li><a href="index.html">Admin</a></li>
+            <li><a href="publikus.html">Public</a></li>
         </ul>
       </nav>
       <article>
-        <div class="urlap"></div>
-        <div class="szerkeszt"></div>
-        <div class="tablazat"></div>
+        <div class="publikustablazat"></div>
       </article>
       <footer>Pálóci Ernő</footer>
     </main>
